--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-	"name": "site-monitor",
-	"version": "0.3.0",
-	"description": "Website monitor",
-	"main": "site-monitor.js",
-	"scripts": {
-		"start": "node site-monitor.js"
-	},
-	"keywords": [
-		"website",
-		"monitor",
-		"uptime",
-		"pingdom"
-	],
-	"repository": {
-		"type": "git",
-		"url": "https://git@github.com/ollieparsley/node-site-monitor.git"
-	},
-	"dependencies": {
-		"nodemailer": "*",
-		"mqtt": "*"
-	},
-	"devDependencies": {
-		"mocha": "*"
-	}
+  "name": "site-monitor",
+  "version": "0.3.0",
+  "description": "Website monitor",
+  "main": "site-monitor.js",
+  "scripts": {
+    "start": "node site-monitor.js"
+  },
+  "keywords": [
+    "website",
+    "monitor",
+    "uptime",
+    "pingdom"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://git@github.com/ollieparsley/node-site-monitor.git"
+  },
+  "dependencies": {
+    "mqtt": "*",
+    "nodemailer": "*",
+    "pushover-notifications": "^1.2.1"
+  },
+  "devDependencies": {
+    "mocha": "*"
+  }
 }
